update CustomerUserDetailsService and create JWTAuthenticationFilter